k8s/base/jobs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobs-stable
  namespace: platform
  labels:
    app: jobs
    rollout: stable
spec:
  selector:
    app: jobs
  ports:
    - name: http
      port: 9097
      targetPort: 9097
    - name: grpc
      port: 8097
      targetPort: 8097
---
apiVersion: v1
kind: Service
metadata:
  name: jobs-canary
  namespace: platform
  labels:
    app: jobs
    rollout: canary
spec:
  selector:
    app: jobs
  ports:
    - name: http
      port: 9097
      targetPort: 9097
    - name: grpc
      port: 8097
      targetPort: 8097
